fullSandbox11072023/force-app/main/default/objects/European_Contractors__c/European_Contractors__c.object-meta.xml
<CustomObject>
    <description>This is a heavily restricted object- for questions related to this object reach out to Heather Suhor with CMA.</description>
    <label>European Contractor</label>
    <nameField>
        <label>Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>European Contractors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>