fullSandbox11072023/force-app/main/default/objects/European_Contractors__c/fields/Alternate_E_mail__c.field-meta.xml
<CustomField>
    <fullName>Alternate_E_mail__c</fullName>
    <label>Alternate E-mail</label>
    <type>Email</type>
</CustomField>