fullSandbox11072023/force-app/main/default/objects/European_Contractors__c/fields/Country_of_License__c.field-meta.xml
<CustomField>
    <fullName>Country_of_License__c</fullName>
    <label>Country of License</label>
    <length>2</length>
    <type>Text</type>
</CustomField>