fullSandbox11072023/force-app/main/default/objects/European_Contractors__c/fields/Credentials__c.field-meta.xml
<CustomField>
    <fullName>Credentials__c</fullName>
    <label>Credentials</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACLS</fullName>
            </value>
            <value>
                <fullName>ACNP</fullName>
            </value>
            <value>
                <fullName>ADN</fullName>
            </value>
            <value>
                <fullName>APRN</fullName>
            </value>
            <value>
                <fullName>ASCP</fullName>
            </value>
            <value>
                <fullName>BLS</fullName>
            </value>
            <value>
                <fullName>BS</fullName>
            </value>
            <value>
                <fullName>BSN</fullName>
            </value>
            <value>
                <fullName>CCEMTP</fullName>
            </value>
            <value>
                <fullName>CCRN</fullName>
            </value>
            <value>
                <fullName>CCT</fullName>
            </value>
            <value>
                <fullName>CEN</fullName>
            </value>
            <value>
                <fullName>CFRN</fullName>
            </value>
            <value>
                <fullName>Chief Medical Officer</fullName>
            </value>
            <value>
                <fullName>CIC</fullName>
            </value>
            <value>
                <fullName>CMSRN</fullName>
            </value>
            <value>
                <fullName>CNCC</fullName>
            </value>
            <value>
                <fullName>C-NPT</fullName>
            </value>
            <value>
                <fullName>CNRN</fullName>
            </value>
            <value>
                <fullName>CPEN</fullName>
            </value>
            <value>
                <fullName>CPNP</fullName>
            </value>
            <value>
                <fullName>CPUI</fullName>
            </value>
            <value>
                <fullName>CRNA</fullName>
            </value>
            <value>
                <fullName>CRNI</fullName>
            </value>
            <value>
                <fullName>CRRT</fullName>
            </value>
            <value>
                <fullName>CTEN</fullName>
            </value>
            <value>
                <fullName>DNP</fullName>
            </value>
            <value>
                <fullName>DO</fullName>
            </value>
            <value>
                <fullName>ED.D</fullName>
            </value>
            <value>
                <fullName>EMT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>