fullSandbox11072023/force-app/main/default/objects/European_Contractors__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AED (United Arab Emirates Dirham)</fullName>
            </value>
            <value>
                <fullName>BGN (Bulgarian Lev)</fullName>
            </value>
            <value>
                <fullName>BD (Bahraini Dinar)</fullName>
            </value>
            <value>
                <fullName>CHF (Swiss Franc)</fullName>
            </value>
            <value>
                <fullName>Kc (Czech Republic Koruna)</fullName>
            </value>
            <value>
                <fullName>Dkr (Danish Krone)</fullName>
            </value>
            <value>
                <fullName>EGP (Egyptian Pound)</fullName>
            </value>
            <value>
                <fullName>EUR (Euro)</fullName>
            </value>
            <value>
                <fullName>GBP (Great British Pound)</fullName>
            </value>
            <value>
                <fullName>kn (Croatian Kuna)</fullName>
            </value>
            <value>
                <fullName>Ft (Hungarian Forint)</fullName>
            </value>
            <value>
                <fullName>Ikr (Icelandic Króna)</fullName>
            </value>
            <value>
                <fullName>RUB (Russian Ruble)</fullName>
            </value>
            <value>
                <fullName>Skr (Swedish Krona)</fullName>
            </value>
            <value>
                <fullName>TL (Turkish Lira)</fullName>
            </value>
            <value>
                <fullName>USD (US Dollar)</fullName>
            </value>
            <value>
                <fullName>R (South African Rand)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>