fullSandbox11072023/force-app/main/default/objects/European_Contractors__c/fields/E_mail_Address__c.field-meta.xml
<CustomField>
    <fullName>E_mail_Address__c</fullName>
    <label>E-mail Address</label>
    <type>Email</type>
</CustomField>