fullSandbox11072023/force-app/main/default/objects/European_Contractors__c/fields/License_Verification__c.field-meta.xml
<CustomField>
    <fullName>License_Verification__c</fullName>
    <label>License Verification</label>
    <type>Date</type>
</CustomField>