fullSandbox11072023/force-app/main/default/objects/European_Contractors__c/fields/Medical_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Medical_License_Number__c</fullName>
    <label>Medical License Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>