fullSandbox11072023/force-app/main/default/objects/European_Contractors__c/fields/Preferred_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Name__c</fullName>
    <label>Preferred Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>