fullSandbox11072023/force-app/main/default/objects/European_Contractors__c/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <label>Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Capt.</fullName>
            </value>
            <value>
                <fullName>Chief</fullName>
            </value>
            <value>
                <fullName>Colonel</fullName>
            </value>
            <value>
                <fullName>Dr.</fullName>
            </value>
            <value>
                <fullName>Lieutenant Colonel</fullName>
            </value>
            <value>
                <fullName>Lieutenant Commander</fullName>
            </value>
            <value>
                <fullName>Lt.</fullName>
            </value>
            <value>
                <fullName>Miss</fullName>
            </value>
            <value>
                <fullName>Mr.</fullName>
            </value>
            <value>
                <fullName>Mrs.</fullName>
            </value>
            <value>
                <fullName>Ms.</fullName>
            </value>
            <value>
                <fullName>Prof</fullName>
            </value>
            <value>
                <fullName>Sr.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>