fullSandbox11072023/force-app/main/default/objects/European_Contractors__c/fields/Supported_Products__c.field-meta.xml
<CustomField>
    <fullName>Supported_Products__c</fullName>
    <label>Supported Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Acute HD</fullName>
            </value>
            <value>
                <fullName>Acute Hemodialysis</fullName>
            </value>
            <value>
                <fullName>Arterial Catheters</fullName>
            </value>
            <value>
                <fullName>AutoFuser</fullName>
            </value>
            <value>
                <fullName>BPSG4</fullName>
            </value>
            <value>
                <fullName>Chlorogard+</fullName>
            </value>
            <value>
                <fullName>CVC-JACC</fullName>
            </value>
            <value>
                <fullName>Endurance</fullName>
            </value>
            <value>
                <fullName>EZ-IO</fullName>
            </value>
            <value>
                <fullName>FlexBlock</fullName>
            </value>
            <value>
                <fullName>FlexTip</fullName>
            </value>
            <value>
                <fullName>G4-VPS</fullName>
            </value>
            <value>
                <fullName>Hem-o-lock</fullName>
            </value>
            <value>
                <fullName>IABP</fullName>
            </value>
            <value>
                <fullName>ISO-Gard</fullName>
            </value>
            <value>
                <fullName>Laryngoscopy</fullName>
            </value>
            <value>
                <fullName>Ligation</fullName>
            </value>
            <value>
                <fullName>LMA EVO</fullName>
            </value>
            <value>
                <fullName>LMA Gastro</fullName>
            </value>
            <value>
                <fullName>LMA MAD Nasal</fullName>
            </value>
            <value>
                <fullName>LMA Supreme</fullName>
            </value>
            <value>
                <fullName>MAC-PSI</fullName>
            </value>
            <value>
                <fullName>Midline</fullName>
            </value>
            <value>
                <fullName>MiniLap System</fullName>
            </value>
            <value>
                <fullName>OnControl</fullName>
            </value>
            <value>
                <fullName>Percutaneous</fullName>
            </value>
            <value>
                <fullName>Percuvance</fullName>
            </value>
            <value>
                <fullName>PICC</fullName>
            </value>
            <value>
                <fullName>Pleur-evac</fullName>
            </value>
            <value>
                <fullName>Rusch AirTraq</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>