fullSandbox11072023/force-app/main/default/objects/European_Contractors__c/fields/Vendor_Number__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Number__c</fullName>
    <label>Vendor Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>