fullSandbox11072023/force-app/main/default/objects/European_Contractors__c/recordTypes/EU_Contractor.recordType-meta.xml
<RecordType>
    <fullName>EU_Contractor</fullName>
    <active>true</active>
    <label>EU Contractor</label>
</RecordType>